manifests/labels/base/k8slabels-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: ns-must-have-gk
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Namespace"]
    namespaces:
      - e2etestsuccess
      - e2etestfail
      - test-opa
      - test-opa-fail
  parameters:
    labels: ["gatekeeper"]
