manifests/labels/base/k8slabels-ns.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: ns-must-have-gk
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Namespace"]
    namespaces:
      - e2etestsuccess
      - e2etestfail
  parameters:
    labels: ["gatekeeper"]
