manifests/labels/base/k8slabels-violations.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: ns-must-have-gk-violations
status:
  totalViolations: 0
